--- a/Shadowrun5thEdition/src/options.html
+++ b/Shadowrun5thEdition/src/options.html
@@ -45,7 +45,7 @@
 						<label data-i18n="magic">Magic</label><input type="number" name="attr_magic_temp" title="@{magic_temp}" /><input type="checkbox" name="attr_magic_temp_flag" value="on" checked />
 						<label data-i18n="resonance">Resonance</label><input type="number" name="attr_resonance_temp" title="@{resonance_temp}" /><input type="checkbox" name="attr_resonance_temp_flag" value="on" checked />
 						<hr />
-						<label data-i18n="initiative">Initiative</label><input type="number" name="attr_initiative_temp" title="@{initiative_temp}" /><input type="checkbox" name="attr_initiative_temp_flag" value="on" checked />
+						<label data-i18n="initiative">Initiative</label><input type="number" name="attr_initiative_mod_temp" title="@{initiative_mod_temp}" /><input type="checkbox" name="attr_initiative_mod_temp_flag" value="on" checked />
 						<label data-i18n="initiativedice">Initiative Dice</label><input type="number" name="attr_initiative_dice_temp" title="@{initiative_dice_temp}" /><input type="checkbox" name="attr_initiative_dice_temp_flag" value="on" checked />
 						<hr />
 						<label data-i18n="physicallimit">Physical Limit</label><input type="number" name="attr_physical_limit_temp" title="@{physical_limit_temp}" /><input type="checkbox" name="attr_physical_limit_temp_flag" value="on" checked />
