Fix typo filching

--- a/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
+++ b/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
@@ -16,7 +16,7 @@ on("sheet:opened", function(eventInfo){
 		sleightofhandMacro: getTranslationByKey("sleightofhand"),
 		shootingMacro: getTranslationByKey("shooting"),
 		lockpickingMacro: getTranslationByKey("lockpicking"),
-		flinchingMacro: getTranslationByKey("flinching"),
+		filchingMacro: getTranslationByKey("filching"),
 		speedloadMacro: getTranslationByKey("speedload"),
 		throwingMacro: getTranslationByKey("throwing"),
 		mineMacro: getTranslationByKey("mine"),
@@ -540,12 +540,12 @@ on("sheet:opened", function(eventInfo){
           </div>
           <hr class="sheet-apthr">		  
           <div class="sheet-row">
-            <div class="sheet-item sheet-xhuge"><label><b><span data-i18n="flinching">Flinchin'</span></b></label></div>
+            <div class="sheet-item sheet-xhuge"><label><b><span data-i18n="filching">Filchin'</span></b></label></div>
             <div class="sheet-item sheet-large"><input type="number" name="attr_filchinlvl" placeholder="Level"></div>
             <div class="sheet-item sheet-tiny">+</div>
             <div class="sheet-item sheet-large"><input type="text" name="attr_filchinmod" placeholder="Mod"></div>
             <div class="sheet-itemright sheet-small">
-              <button type="roll" name="roll_Filchin" value="@{gmtoggle}&{template:simple}  {{rollname=@{flinchingMacro}}} {{dice=[[@{filchinlvl}@{defdtype}!!k1+@{filchinmod}]]}}"></button>
+              <button type="roll" name="roll_Filchin" value="@{gmtoggle}&{template:simple}  {{rollname=@{filchingMacro}}} {{dice=[[@{filchinlvl}@{defdtype}!!k1+@{filchinmod}]]}}"></button>
             </div>
           </div>
           <hr class="sheet-apthr">
@@ -1320,12 +1320,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_larmwtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
@@ -1335,12 +1335,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_llegwtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
@@ -1350,12 +1350,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_rarmwtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
@@ -1365,12 +1365,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_rlegwtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
@@ -1382,12 +1382,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_headwtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
@@ -1397,12 +1397,12 @@ on("sheet:opened", function(eventInfo){
 			</div>
 			<div class="sheet-xxhuge">
 			  <select name="attr_gutswtype" class="sheet-wounds">
-				<option value="0"><span data-i18n="none">None</span></option>
-				<option value="1"><span data-i18n="light">Light</span></option>
-				<option value="2"><span data-i18n="heavy">Heavy</span></option>
-				<option value="3"><span data-i18n="serious">Serious</span></option>
-				<option value="4"><span data-i18n="critical">Critical</span></option>
-				<option value="5"><span data-i18n="maimed">Maimed</span></option>
+				<option value="0" data-i18n="none"></option>
+				<option value="1" data-i18n="light"></option>
+				<option value="2" data-i18n="heavy"></option>
+				<option value="3" data-i18n="serious"></option>
+				<option value="4" data-i18n="critical"></option>
+				<option value="5" data-i18n="maimed"></option>
 			  </select>
 			</div>
         </div>
