--- a/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
+++ b/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
@@ -1025,7 +1025,7 @@ on("sheet:opened", function(eventInfo){
         <!-- Smarts -->
         <div class="sheet-borderdiv">
           <div class="sheet-row">
-            <div class="sheet-item sheet-xhuge sheet-h2"><label><b><span data-i18n="science">Smarts</span></b></label></div>
+            <div class="sheet-item sheet-xhuge sheet-h2"><label><b><span data-i18n="smarts">Smarts</span></b></label></div>
             <div class="sheet-item sheet-large"><input type="text" name="attr_smalvl"></div>
             <div class="sheet-item sheet-tiny">d</div>
             <div class="sheet-item sheet-large">
