fix guts + gritt roll

--- a/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
+++ b/Deadlands Classic Anniversary/deadlandsclassic_anniversary.html
@@ -370,7 +370,7 @@ on("sheet:opened", function(eventInfo){
         <div class="sheet-col">
           <div class="sheet-item sheet-xxxlarge"><label><b><span data-i18n="gutsAndGrit">Guts + Grit</span></b></label></div>
           <div class="sheet-item sheet-small">
-            <button type="roll" name="roll_GutsGrit" value="@{gmtoggle}&{template:simple}  {{rollname=@{gutsAndGritMacro}}} {{dice=[[@{gutslvl}@{spidtype}!!k1@{gutsmod}+@{grit}]]}}"></button>
+            <button type="roll" name="roll_GutsGrit" value="@{gmtoggle}&{template:simple}  {{rollname=@{gutsAndGritMacro}}} {{dice=[[@{gutslvl}@{spidtype}!!k1+@{gutsmod}+@{grit}]]}}"></button>
           </div>
         </div>
       </div>
