Creature Log Complete

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -4882,9 +4882,10 @@
 		<div class="sophontAspectColumnB">Length:</div>
 		<div class="sophontTextColumnB threatTextBox"><input type="text" name="attr_length" /></div>
 		<div class="sophontAspectColumnA">Tags:</div>
-		<div class="sophontTextColumnA threatTextBox sophontTagBox"><textarea name="attr_tags" class="threatTextBox sophontTagBox"></textarea></div>
+		<div class="sophontTextColumnA threatTextBox creatureTagBox"><textarea name="attr_tags" class="threatTextBox creatureTagBox"></textarea></div>
 		<div class="sophontAspectColumnB">Notes:</div>
-		<div class="sophontTextColumnB threatTextBox sophontTagBox"><textarea name="attr_notes" class="threatTextBox sophontTagBox"></textarea></div>
+		<div class="sophontTextColumnB threatTextBox creatureTagBox"><textarea name="attr_notes" class="threatTextBox creatureTagBox"></textarea></div>
+		<input type="number" name="attr_damageTotal" min="0" max="10" class="threatDamageBox" /><span class="creatureDamageBoxBG"></span>
 		<!--Condition Slots-->
 		<div class="creatureConditionWidget">
 			<div class="sophontConditionTitle">Conditions Slots</div>
@@ -5003,7 +5004,7 @@
 
 		<!--Additional Condition Slots-->
 		<!--Slots 2-->
-		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition2">
+		<div class="additionalCreatureConditionWidget additionalCompositeSophontCondition2">
 			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont2" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat2" value="1" />
@@ -5026,15 +5027,18 @@
 			<!--Resilience 2-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat2" value="1" />
 			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Resilience 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_resilienceCondition3Threat2" value="1" />
+			<span class="resilienceThreat largePips sophontCondition8 additionalSophontColumn"></span>
 			<!--Integrity-->
-			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat2" value="1" />
-			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_IntegrityConditionThreat2" value="1" />
+			<span class="integrityThreat largePips sophontCondition9 additionalSophontColumn"></span>
 			<!--Vitality-->
-			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat2" value="1" />
-			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition10 additionalSophontColumn" name="attr_vitalityConditionThreat2" value="1" />
+			<span class="vital largePips sophontCondition10 additionalSophontColumn"></span>
 		</div>
 		<!--Slots 3-->
-		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition3">
+		<div class="additionalCreatureConditionWidget additionalCompositeSophontCondition3">
 			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont3" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat3" value="1" />
@@ -5057,15 +5061,18 @@
 			<!--Resilience 2-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat3" value="1" />
 			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Resilience 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_resilienceCondition3Threat3" value="1" />
+			<span class="resilienceThreat largePips sophontCondition8 additionalSophontColumn"></span>
 			<!--Integrity-->
-			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat3" value="1" />
-			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_IntegrityConditionThreat3" value="1" />
+			<span class="integrityThreat largePips sophontCondition9 additionalSophontColumn"></span>
 			<!--Vitality-->
-			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat3" value="1" />
-			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition10 additionalSophontColumn" name="attr_vitalityConditionThreat3" value="1" />
+			<span class="vital largePips sophontCondition10 additionalSophontColumn"></span>
 		</div>
 		<!--Slots 4-->
-		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition4">
+		<div class="additionalCreatureConditionWidget additionalCompositeSophontCondition4">
 			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont4" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat4" value="1" />
@@ -5088,15 +5095,18 @@
 			<!--Resilience 2-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat4" value="1" />
 			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Resilience 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_resilienceCondition3Threat4" value="1" />
+			<span class="resilienceThreat largePips sophontCondition8 additionalSophontColumn"></span>
 			<!--Integrity-->
-			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat4" value="1" />
-			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_IntegrityConditionThreat4" value="1" />
+			<span class="integrityThreat largePips sophontCondition9 additionalSophontColumn"></span>
 			<!--Vitality-->
-			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat4" value="1" />
-			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition10 additionalSophontColumn" name="attr_vitalityConditionThreat4" value="1" />
+			<span class="vital largePips sophontCondition10 additionalSophontColumn"></span>
 		</div>
 		<!--Slots 5-->
-		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition5">
+		<div class="additionalCreatureConditionWidget additionalCompositeSophontCondition5">
 			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont5" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat5" value="1" />
@@ -5119,15 +5129,19 @@
 			<!--Resilience 2-->
 			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat5" value="1" />
 			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Resilience 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_resilienceCondition3Threat5" value="1" />
+			<span class="resilienceThreat largePips sophontCondition8 additionalSophontColumn"></span>
 			<!--Integrity-->
-			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat5" value="1" />
-			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_IntegrityConditionThreat5" value="1" />
+			<span class="integrityThreat largePips sophontCondition9 additionalSophontColumn"></span>
 			<!--Vitality-->
-			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat5" value="1" />
-			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition10 additionalSophontColumn" name="attr_vitalityConditionThreat5" value="1" />
+			<span class="vital largePips sophontCondition10 additionalSophontColumn"></span>
 		</div>
 	</div>
 </div>
+
 
 
 <script type="text/worker">
