--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -2,6 +2,22 @@
 <span>Eternity</span>
             <!-- Character Record Sheet -->
 </div>
+<input class="announcements" type="hidden" name="attr_announcement" value="1" />
+    <div class="announcements">
+        <h3 class="title">Coming Soon: Version 4 Upgrade</h3>
+        <p>The sheet will soon (likely before the end of March) be upgraded to version 4. You can learn more about the new sheet at the sheet's wiki here:</p>
+        <input type"text" class="linkclass" value="https://wiki.roll20.net/Torg_Eternity_Community_Sheet" readonly /> 
+        <p>
+            Your characters should be updated smoothly and accurately, but the sheet is a big change and some things may glitch. You can test your characters by exporting them to the roll20 Character Vault, then import them to a public test campaign here:
+        </p>
+        <input type"text" class="linkclass" value="https://app.roll20.net/join/5981834/-xhKMQ" readonly /> 
+        <p>This will show you how well they convert. You can post feedback at the sheet's thread here:</p>
+        <input type"text" class="linkclass" value="https://app.roll20.net/forum/post/8130061/torg-eternity-sheet-redesign-thread/" readonly /> 
+        <button class="ability-roll announcements" type="action" name="act_announcements_close">
+            <h3>Close This Frame</h3>
+        </button>
+        <p>You can show this frame again by clicking the Announcements options in the setting sidebar.</p>
+    </div>
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab1" value="1" title="Home" checked="checked" /><span title="Character"></span>
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab2" value="2" title="Notes" /><span title="Equipment"></span>
 <input type="radio" name="attr_tab" class="sheet-tab sheet-tab3" value="3" title="Perks" /><span title="Perks"></span>
@@ -22,6 +38,11 @@
         <button type="roll" class="hidden" name="result-up" value="&{template:possibility} {{previousroll=@{previous-result}}} {{newroll=[[@{previous-result}+(1d20!10!!20cs10cs) @{rolltracker}]]}} @{rollspecial}"></button>
         <button type="roll" class="hidden" name="result-bonusdie" value="&{template:coupdegrace} {{neweffect=[[@{previous-result} + 1d6!p @{rolltracker}]]}} @{rollspecialdamage}"></button>
     </label>
+    <br />
+    <label>
+        <input type="checkbox" name="attr_announcement" value="1" />
+        <span>Toggle Announcement</span>
+        </label>
 </div>
 
 <div class="sheet-tab-content sheet-tab1">
@@ -1953,4 +1974,10 @@
             }
         });
     });
+    on(`clicked:announcements_close`, function () {
+        setAttrs({
+            announcements: 0
+        });
+    });
+    
 </script>
